[package]
name = "cinematic"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "CineMatic is a powerful and user-friendly Discord bot that allows users to manage their media collections. With its advanced features, Cinematic can help you make changes to your media server, view available content, and even answer questions related to your media collection."
authors = ["Dan Lock <codenil@proton.me>"]
repository = "https://github.com/CodedNil/CineMatic"
keywords = ["discord", "media-server"]
categories = ["discord-bot", "media-library", "utilities"]

[dependencies]
dotenvy = "0.15.0"
anyhow = "1.0.89"
async-openai = "0.25.0"
chrono = "0.4.38"
time = "0.3.36"
futures = "0.3.31"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
scraper = "0.20.0"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = { version = "0.12.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
