[package]
name = "cinematic"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "CineMatic is a powerful and user-friendly Discord bot that allows users to manage their media collections. With its advanced features, Cinematic can help you make changes to your media server, view available content, and even answer questions related to your media collection."
authors = ["Dan Lock <codenil@proton.me>"]
repository = "https://github.com/CodedNil/CineMatic"
keywords = ["discord", "media-server"]
categories = ["discord-bot", "media-library", "utilities"]

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.95"
async-openai = "0.26.0"
chrono = "0.4.39"
time = "0.3.37"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json"] }
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.134"
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
